Добавили условие к выводу сотрудника на наличие премии: класс к тегу.

--- a/src/components/employers-list-item/employers-list-item.css
+++ b/src/components/employers-list-item/employers-list-item.css
@@ -1,6 +1,6 @@
 .list-group-item {
     padding: 1rem;
-    border-bottom: 1px solid var(--colorPrimary);
+    border-bottom: 1px solid #ccc;
 }
 
 .list-group-item:last-child {
