--- a/src/components/employers-list-item/employers-list-item.css
+++ b/src/components/employers-list-item/employers-list-item.css
@@ -24,8 +24,9 @@
     width: 35px;
     height: 35px;
     margin: 3px;
-    font-size: 17px;
     border: none;
+    background: none;
+    font-size: 17px;
     cursor: pointer;
 }
 
